Functional event logging from host

--- a/moz_au_web/static/js/pages/backup_detail.html
+++ b/moz_au_web/static/js/pages/backup_detail.html
@@ -22,7 +22,7 @@
         <td>{{ backup.id }}</td>
         <td>{{ backup.return_code }}</td>
         <td>{{ backup.log_text }}</td>
-        <td>{{ backup.stdout }}</td>
+        <td><pre>{{ backup.stdout }}</pre></td>
         <td>{{ backup.stderr }}</td>
         <td>{{ backup.created_at }}</td>
     </tr>
