Updates to reflect client api changes

--- a/moz_au_web/static/js/pages/list.html
+++ b/moz_au_web/static/js/pages/list.html
@@ -26,7 +26,7 @@
             <td>
                 {{ backup.created_at }}
             </td>
-            <td><a href="#backupdetail/{{ backup.backup_id }}">{{ backup.hostname }}</a></td>
+            <td><a href="#backups/{{ backup.hostname }}">{{ backup.hostname }}</a></td>
             <td>
                 {{ backup.return_code }}
             </td>
