--- a/moz_au_web/static/js/pages/list.html
+++ b/moz_au_web/static/js/pages/list.html
@@ -12,7 +12,8 @@
         </tr>
         </tbody>
     </table>
-    <table style="margin-top: 55px;" ng-if="recent.length > 0" class="table table-bordered table-striped">
+    <h3>Recent Update Logs</h3>
+    <table style="margin-top: 15px;" ng-if="recent.length > 0" class="table table-bordered table-striped">
         <thead>
         <tr>
             <th>Date</th>
