--- a/moz_au_web/static/js/pages/update_list.html
+++ b/moz_au_web/static/js/pages/update_list.html
@@ -1,5 +1,5 @@
 <a ng-init="init(5)" href="/">Home</a>
-<div ng-if="updates.length == 0">
+<div ng-if="updates.length == 0 && has_loaded = true">
     <h3>No Updates for System</h3>
 </div>
 <table style="margin-top: 55px;" ng-if="updates.length > 0" class="table table-bordered table-striped">
