--- a/moz_au_web/static/js/pages/update_detail.html
+++ b/moz_au_web/static/js/pages/update_detail.html
@@ -1,5 +1,8 @@
-<a ng-init="init(5)" href="/">Home</a>
-<a href="/#/updates/{{ hostname }}/">Updates</a>
+<ul ng-init="init(5)" class="breadcrumb">
+    <li><a href="#">Home</a></li>
+    <li><a href="/#/updates/{{ hostname }}/">Recent Updates</a></li>
+    <li>{{ hostname }}</li>
+</ul>
 <div ng-if="updates.length == 0 && has_loaded = true">
     <h3>No Updates for System</h3>
 </div>
