--- a/moz_au_web/static/js/pages/update_detail.html
+++ b/moz_au_web/static/js/pages/update_detail.html
@@ -26,7 +26,7 @@
         <td>{{ update.return_code }}</td>
         <td>{{ update.log_text }}</td>
         {{ update.stdout.length }}
-        <td ng-if="update.stdout.length"><pre>{{ update.stdout }}</pre></td>
+        <td ng-if="update.stdout.length"><pre>{{ update.stdout|limitTo : 200}}</pre></td>
         <td ng-if="!update.stdout">&nbsp;</td>
         <td>{{ update.stderr }}</td>
         <td>{{ update.created_at }}</td>
