--- a/moz_au_web/static/js/pages/update_list.html
+++ b/moz_au_web/static/js/pages/update_list.html
@@ -2,7 +2,11 @@
     <li><a href="#">Home</a></li>
     <li>Recent Updates</li>
 </ul>
-<div ng-if="updates.length == 0 && has_loaded = true">
+<div>
+    <dt>Hostname: <dd>{{ system.hostname }}</dd></dt>
+    <dt>Cronfile: <dd><a href="#updatecron/{{ system.hostname }}/">{{ system.cronfile }}</a></dd></dt>
+</div>
+<div ng-if="updates.length == 0 && has_loaded == true">
     <h3>No Updates for System</h3>
 </div>
 <table style="margin-top: 55px;" ng-if="updates.length > 0" class="table table-bordered table-striped">
