--- a/moz_au_web/static/js/pages/update_list.html
+++ b/moz_au_web/static/js/pages/update_list.html
@@ -6,9 +6,6 @@
     <dt>Hostname: <dd>{{ system.hostname }}</dd></dt>
     <dt>Manage Scripts: <dd><a href="#scripts/{{ system.hostname }}">Manage Run Scripts</a></dd></dt>
 </div>
-<div ng-if="updates.length == 0 && has_loaded == true">
-    <h3>No Updates for System</h3>
-</div>
 <div style="margin-top: 5px;">
     <button class='btn btn-primary' ng-click="ping()">Ping Host</button>
 
@@ -16,6 +13,33 @@
 <div style="margin-top: 5px;">
     <button class='btn btn-primary' ng-click="start_update()">Update Host Now</button>
 
+</div>
+<div ng-if="pings.length == 0 && has_loaded == true">
+    <h3>No Pings for System</h3>
+</div>
+<div ng-if="pings.length > 0 && has_loaded == true">
+    <h3>Pings for System</h3>
+</div>
+<table style="margin-top: 55px;" ng-if="pings.length > 0" class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Success</th>
+        <th>Ping Start</th>
+        <th>Ping Response</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="ping in pings">
+        <td>{{ ping.id }}</td>
+        <td>{{ ping.success }}</td>
+        <td>{{ ping.ping_time }}</td>
+        <td>{{ ping.pong_time }}</td>
+    </tr>
+    </tbody>
+</table>
+<div ng-if="updates.length == 0 && has_loaded == true">
+    <h3>No Updates for System</h3>
 </div>
 <table style="margin-top: 55px;" ng-if="updates.length > 0" class="table table-bordered table-striped">
     <thead>
