Lots of updates and a weak commit message

--- a/moz_au_web/static/js/pages/group_create.html
+++ b/moz_au_web/static/js/pages/group_create.html
@@ -3,8 +3,7 @@
     <li><a href="/#/groups/">Groups</a></li>
 </ul>
 <div>
-<div ng-bind-html="success_message">
-</div>
+<div flash-message="5000" ></div>
 </div>
 <form>
     <div>
