Fixed boolean 1/0 display on ping/pong response

--- a/moz_au_web/static/js/pages/update_list.html
+++ b/moz_au_web/static/js/pages/update_list.html
@@ -32,7 +32,7 @@
     <tbody>
     <tr ng-repeat="ping in pings">
         <td>{{ ping.id }}</td>
-        <td>{{ ping.success }}</td>
+        <td>{% if ping.success == 1 %}True{% else %}False{% endif %}</td>
         <td>{{ ping.ping_time }}</td>
         <td>{{ ping.pong_time }}</td>
     </tr>
