Added ability to manage script_exit_code_reboot via web interface

--- a/moz_au_web/static/js/pages/script_edit.html
+++ b/moz_au_web/static/js/pages/script_edit.html
@@ -12,6 +12,9 @@
 	        <label style="padding-right: 5px;" for="file_name">Filename:</label><input class="form-control" type="text" ng-model="file_name" id="file_name" />
 	    </div>
 	    <div class="form-group">
+	        <label style="padding-right: 5px;" for="script_exit_code_reboot">Exit Code Reboot:</label><input class="form-control" type="text" ng-model="script_exit_code_reboot" id="script_exit_code_reboot" />
+	    </div>
+	    <div class="form-group">
 		    <label style="padding-right: 5px;" for="description">Description:</label><textarea rows="8" class="form-control" ng-model="description" id="description" ></textarea>
 	    </div>
 	    <div class="form-group">
