Created cron based scheduler to fire off group updates at appropriate times

--- a/moz_au_web/static/js/pages/group_detail.html
+++ b/moz_au_web/static/js/pages/group_detail.html
@@ -94,6 +94,8 @@
                         <span ng-if="update.status_code == 0">Completed</span>
                         <span ng-if="update.status_code == 1">Warning</span>
                         <span ng-if="update.status_code == 2">Failed</span>
+                        <span ng-if="update.status_code == 3">Running</span>
+                        <span ng-if="update.status_code == 4">Host Rebooting</span>
                     </td>
                 </tr>
                 </tbody>
